# briefing

school-report-python/: .gitignore  2gera_relatorio.bat  README.md  gera_relatorio.bat  pyproject.toml
school-report-python/docker/: .env.example  Dockerfile 2.worker  Dockerfile.api  docker-compose 2.yml
school-report-python/docs/: TRANSFORM_MIGRATION_PLAN.md
school-report-python/migrations/: alembic.ini  env.py
school-report-python/migrations/versions/: 20260126_0001_001_create_jobs_table.py  20260126_0002_002_create_cache_table.py  20260126_0003_003_create_audit_log_table.py
school-report-python/reports/: README.md
school-report-python/reports/ANEXOS-BRIEFINGS/: README.md  executor.py  gera_anexos_briefing.bat  report.yaml
school-report-python/reports/ATM-EQ/: .editorconfig  .gitattributes  .gitignore  README.md  charts.py  executor.py  report.yaml  visualize_condicionalidades.ipynb
school-report-python/reports/ATS-02/: .gitignore  MIGRATION_SUMMARY.md  charts.py  executor.py  report.yaml  test_generate.py
school-report-python/reports/ATS-ORC-R/: README.md  VERIFICACAO_QUERIES.html  VERIFICACAO_QUERIES.md  charts.py  executor.py  report.yaml
school-report-python/reports/BRIEF-LOCAL-BEAU/: README.md  executor.py  report.yaml
school-report-python/reports/BRIEFING/: executor.py  report.yaml
school-report-python/reports/BRIEFING-LOCAL/: README.md  executor.py  report.yaml
school-report-python/reports/BRIEFING-LOCAL-2/: README.md  executor.py  report.yaml
school-report-python/reports/BRIEFING-MUNICIPIO/: README.md  executor.py  report.yaml
school-report-python/reports/FLYER-PAC/: README.md  executor.py  report.yaml
school-report-python/reports/_cookiecutter/: README.md  cookiecutter.json
school-report-python/reports/_shared/: README.md
school-report-python/reports/sample/: report.yaml
school-report-python/src/schoolreport/: charts.py  config.py
school-report-python/templates/report/: cookiecutter.json
school-report-python/tests/: conftest 2.py  test_config.py
school-report-python/tests/test_api/: test_app 2.py  test_deps.py  test_health 2.py  test_jobs.py  test_reports 2.py
(+318 files in other folders)
