[project]
name = "schoolreport"
version = "0.1.0"
description = "School Report - Python rebuild for generating education reports"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "SEGAPE Team", email = "segape@mec.gov.br"},
]
dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # CLI Framework
    "typer>=0.9.0",
    "rich>=13.7.0",
    # Async & Queue
    "asyncio>=3.4.3",
    "arq>=0.25.0",
    "redis>=5.0.0",
    # Google Cloud
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-storage>=2.14.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "db-dtypes>=1.2.0",
    "openpyxl>=3.1.0",
    # Charts
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "geobr>=0.2.2",
    # Utils
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "pyarrow>=23.0.0",
    # Caching
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
    "cookiecutter>=2.5.0",
]

[project.scripts]
schoolreport = "schoolreport.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schoolreport"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/schoolreport --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
